--- a/index.html
+++ b/index.html
@@ -2,16 +2,37 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <header>
+      Instructions for da user
+    </header>
   </head>
-  <title>Events fun</title>
+  <title>Skybus</title>
+     <link rel="stylesheet" href="style.css">
   <body>
-    <h1 id="first">First </h1>
+    <div id="image-container">
+      <!-- <section id="image1">image1</section>
+      <section id="image2">image2</section>
+      <section id="image3">image3</section> -->
+
+
+        <div id="box1">
+          <img id="firstImage" src=" "/>
+        </div>
+        <div id="box2">
+          <img id="secondImage" src=" "/>
+        </div>
+        <div id="box3">
+          <img id="thirdImage" src=" "/>
+        </div>
+
+
+
+    </div>
+<!--
+   <h1 id="first">First </h1>
     <h1 id="second">First</h1>
-    <h1 id="third">First</h1>
+    <h1 id="third">First</h1> -->
 
-    <script type="text/javascript">
-
-    </script>
+    <script src="app.js"></script>
   </body>
 </html>
