app.js changed with comments coounter works but is not displayed on screen yet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <header>
-      Instructions for da user
+      Click the image that most intrest you (15 total)
     </header>
   </head>
   <title>Skybus</title>
@@ -24,8 +24,8 @@
 
 
     </div>
-<!--
-   <h1 id="first">First </h1>
+
+   <!-- <h1 id="first">First </h1>
     <h1 id="second">First</h1>
     <h1 id="third">First</h1> -->
 
