awww man Fuck all of this Shit nuked it killed it nuked it fucked it in that order

--- a/index.html
+++ b/index.html
@@ -12,23 +12,17 @@
     <div id="image-container">
 
         <div id="box1">
-          <img id="firstImage" src=" "/>
+          <img id="image1" src=" "/>
         </div>
         <div id="box2">
-          <img id="secondImage" src=" "/>
+          <img id="image2" src=" "/>
         </div>
         <div id="box3">
-          <img id="thirdImage" src=" "/>
+          <img id="image3" src=" "/>
         </div>
-
-
-
     </div>
-
-   <!-- <h1 id="first">First </h1>
-    <h1 id="second">First</h1>
-    <h1 id="third">First</h1> -->
 
     <script src="app.js"></script>
   </body>
+  <footer>N/A</footer>
 </html>
