--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         </div>
     </div>
 
+    <canvas id="popularity" width="400" height="400"></canvas>
+    <script src="chart.js"></script>
     <script src="app.js"></script>
   </body>
   <footer>N/A</footer>
