--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut_icon" href="week-3Assets/favicon.gif" >
+    <link rel="icon" href="week-3Assets/favicon.gif" type="image/gif" >
   <header>
       Click the image that most intrest you (15 total)
     </header>
