ice cream is in local storage

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
      <link rel="stylesheet" href="style.css">
   <body>
 
-    <button hidden id ="resultsButton" type="button">
-      Display Results
-    </button>
     <div id="resultsDisplay">
     </div>
     <div id="image-container">
@@ -30,6 +27,12 @@
         </div>
     </div>
     <!-- <button type="button" name="submitButton"></button> -->
+    <button hidden id ="resultsButton" type="button">
+      Display Results
+    </button>
+    <button hidden id ="destroy" type="button">
+      Clear Local Storage
+    </button>
     <canvas id="popularity" width="400" height="400"></canvas>
     <script src="app.js"></script>
   </body>
